--- a/src/_includes/_hero.njk
+++ b/src/_includes/_hero.njk
@@ -3,18 +3,16 @@
     <div class="row">
       <div class="col content">
         <h2 class="headline mono">
-          First impressions<br />
-          <span>mean everything</span>
+          Sycamore Design
         </h2>
         <p class="subheadline">
-          What does your web presence say about your business?
+          Well look at that, you done found the internet home of Sam Sycamore.
         </p>
         <p class="callout">
-          → We help agencies and startups convert new clients to enthusiastic
-          supporters.
+          Go 'head and make your way down this page to find out more about the various plates I got spinnin' in the air.
         </p>
         <div>
-          <a class="btn" href="#contact">Let's Talk</a>
+          <a class="btn" href="#socials">Holler at me</a>
         </div>
       </div>
       <div class="col animation">
