--- a/src/index.njk
+++ b/src/index.njk
@@ -3,9 +3,8 @@ layout: base.njk
 title: Home
 ---
 
-{% include "Header.njk" %}
 {% include "_hero.njk" %}
-{% include "_services.njk" %}
-{% include "_contact.njk" %}
+{% include "_stuff.njk" %}
+{% include "_socials.njk" %}
 {% include "_newsletter.njk" %}
 {% include "_footer.njk" %}
