--- a/src/socials.njk
+++ b/src/socials.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
-title: Contact
+title: On Social Media
 ---
 
-{% include "_contact.njk" %}
+{% include "_socials.njk" %}
 {% include "_footer.njk" %}
