--- a/src/_includes/_footer.njk
+++ b/src/_includes/_footer.njk
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <p>Copyright © 2021 Sycamore Design.</p>
-        <p>All rights reserved.</p>
+        <p>Built with solar energy ☀️ in the Santa Cruz Mountains of California.</p>
       </div>
     </div>
   </div>
