--- a/src/_includes/_stuff.njk
+++ b/src/_includes/_stuff.njk
@@ -1,5 +1,5 @@
 {% macro card(img, title, line1, line2, line3) %}
-<div class="services-card">
+<div class="stuff-card">
   <img src="../img/icons/{{ img }}" />
   <h4 class="card-title mono">
     {{ title }}
@@ -10,22 +10,21 @@
 </div>
 {% endmacro %}
 
-<section class="services" id="services">
+<section class="stuff" id="stuff">
   <div class="wrapper">
     <div class="row">
       <div class="col">
-        <h2 class="desc">Our Services</h2>
+        <h2 class="desc">Some Stuff I Do</h2>
         <span class="title mono">
-          <span>Sycamore Design</span>
-          provides
+          What brings y'all here?
         </span>
       </div>
     </div>
     <div class="row grid">
       {{
         card(
-          "upload.svg",
-          "Web development",
+          "blocks.svg",
+          "Read my blog",
           "We specialize in beautiful, lightning-fast websites that are optimized for all devices.",
           "From concept to completion, we are your one-stop shop for upgrading your web presence and generating more leads."
         )
@@ -34,7 +33,7 @@
       {{
         card(
           "paper.svg",
-          "Technical writing",
+          "Read my newsletter",
           "Beginner-friendly documentation is the best possible advocate for your software product.",
           "Our empathy-driven docs and tutorials keep new users happy and help persuade existing users to tell their friends."
         )
@@ -43,7 +42,7 @@
       {{
         card(
           "speaker.svg",
-          "Marketing & copywriting",
+          "See my portfolio",
           "Your website has mere seconds to convince a new visitor to stick around.",
           "We captivate your audience by creating memorable experiences and centering their satisfaction at every step."
         )
@@ -52,7 +51,7 @@
       {{
         card(
           "click.svg",
-          "Search engine optimization",
+          "Read my press bio",
           "SEO doesn't have to feel like sorcery.", 
           "We demystify the process of keyword research and technical SEO for our clients.",
           "Need killer content to bring in new search engine traffic? Ask about content-driven SEO."
