--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -87,108 +87,6 @@ ul {
   list-style-type: none;
 }
 
-header {
-  position: fixed;
-  top: 2%;
-  left: 0;
-  width: 100%;
-  z-index: 50;
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    transition: 400ms all ease-in-out;
-  }
-  
-  .row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  a {
-    text-decoration: none;
-    position: relative;
-    color: $light;
-    @media screen and (max-width: 680px) {
-      font-size: 1.25em;
-      color: #fff;
-    }
-  }
-  a:hover {
-    color: $color-2;
-    transition: all 0.3s ease-in-out;
-  }
-  a::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 1px;
-    bottom: 0;
-    left: 0;
-    background-color: $color-2;
-    transition: all 0.3s ease-in-out;
-  }
-  a:hover::before {
-    width: 100%;
-  }
-}
-.hamburger {
-  display: none;
-  @media screen and (max-width: 680px) {
-    position: relative;
-    display: flex;
-    padding: 10px 5px;
-    z-index: 50;
-  }
-  &.is-active {
-    .hamburger-inner,
-    .hamburger-inner::before,
-    .hamburger-inner::after {
-      background-color: #fff;
-    }
-  }
-  .hamburger-inner,
-  .hamburger-inner::before,
-  .hamburger-inner::after {
-    background-color: #fff;
-  }
-}
-nav {
-  @media screen and (max-width: 680px) {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    max-width: 320px;
-    height: 100vh;
-    padding: 20px;
-    padding-top: 90px;
-    background: #000;
-    transform: translateX(100%);
-    transition: 300ms all ease-in-out;
-  }
-  &.is-active {
-    transform: translateX(0);
-  }
-  ul {
-    display: flex;
-    li {
-      margin-left: 40px;
-    }
-    @media screen and (max-width: 680px) {
-      flex-direction: column;
-      li {
-        margin-bottom: 40px;
-        font-size: 3rem;
-      }
-    }
-  }
-}
-
 .hero {
   background: #000;
   background-image: url("../img/assets/bg.svg");
@@ -232,6 +130,7 @@ nav {
           font-size: 3rem;
           font-weight: thin;
           font-style: italic;
+          line-height: 1.3em;;
           margin-bottom: 2.5rem;
           @media screen and (max-width: 660px) {
             font-size: 2.2rem;
@@ -267,7 +166,7 @@ nav {
   }
 }
 
-.services {
+.stuff {
   margin-bottom: 200px;
   .row {
     margin-bottom: 50px;
@@ -296,7 +195,7 @@ nav {
   }
   .grid {
     @include theme-grid;
-    .services-card {
+    .stuff-card {
       background: $color-3;
       min-width: 320px;
       padding: 4rem;
@@ -325,7 +224,7 @@ nav {
         padding: 2rem 1.5rem;
       }
     }
-    .services-card:hover {
+    .stuff-card:hover {
       background: $color-2;
       transform: scale(102%);
       transition: 300ms ease-in-out;
@@ -333,7 +232,7 @@ nav {
   }
 }
 
-.contact {
+.socials {
   min-height: 100vh;
   margin-bottom: 200px;
   .row {
