stuff section looking good

--- a/src/_includes/_hero.njk
+++ b/src/_includes/_hero.njk
@@ -2,14 +2,14 @@
   <div class="wrapper">
     <div class="row">
       <div class="col content">
-        <h2 class="headline mono">
+        <h1 class="headline mono">
           Sycamore Design
-        </h2>
+        </h1>
         <p class="subheadline">
           Well look at that, you done found the internet home of Sam Sycamore.
         </p>
         <p class="callout">
-          Go 'head and make your way down this page to find out more about the various plates I got spinnin' in the air.
+          Go 'head and make your way down this page to find out more about the various plates I got spinnin' in the air right now.
         </p>
         <div>
           <a class="btn" href="#socials">Holler at me</a>
