ready for prod friday night what could go wrong

--- a/src/_includes/_socials.njk
+++ b/src/_includes/_socials.njk
@@ -5,8 +5,28 @@
         <h2 class="desc">On social media</h2>
         <span class="title mono">Follow me over yonder</span>
       </div>
-    </div> 
+    </div>
     <div class="row grid">
+      
+      <div class="col social-links">
+        <ul>
+          <li>
+            <a href="https://www.twitter.com/tanoaksam" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/samuelsycamore" target="_blank">LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://hashnode.com/@tanoaksam" target="_blank">Hashnode</a>
+          </li>
+          <li>
+            <a href="https://work.sycamore.design" target="_blank">Polywork</a>
+          </li>
+          <li>
+            <a href="https://www.github.com/samuelsycamore" target="_blank">GitHub</a>
+        </ul>
+
+      </div>
       <div class="col animation">
         <lottie-player
           src="https://assets5.lottiefiles.com/packages/lf20_dHUtAw.json"
@@ -15,9 +35,6 @@
           loop
           autoplay
         ></lottie-player>
-      </div>
-      <div class="col calendar">
-
       </div>
     </div>
   </div>
