--- a/src/_includes/_stuff.njk
+++ b/src/_includes/_stuff.njk
@@ -32,7 +32,7 @@
           
           "Read my blog",
           "The Sycamore Design Blog", 
-          "covers the art & business of content creation, marketing & copywriting, technical writing, freelancing, and web development."
+          "covers the art and business of content creation, marketing, copywriting, technical writing, freelancing, and web development."
         )
       }}
 
@@ -60,7 +60,7 @@
 
       {{
         card(
-          "https://blog.sycamore.design",
+          "https://sycamoredesign.notion.site/Sam-s-Press-Kit-08ca728b8a6f4ead9726021f328e47fc",
           "click.svg",
           "Read my bio",
           
