--- a/src/_includes/_stuff.njk
+++ b/src/_includes/_stuff.njk
@@ -50,7 +50,7 @@
       {{
         card(
           "https://work.sycamore.design",
-          "speaker.svg",
+          "palette.svg",
           
           "View my portfolio",
           "My portfolio", 
@@ -61,7 +61,7 @@
       {{
         card(
           "https://sycamoredesign.notion.site/Sam-s-Press-Kit-08ca728b8a6f4ead9726021f328e47fc",
-          "click.svg",
+          "info-card.svg",
           "Read my bio",
           
           "My press kit", 
