--- a/src/_includes/_newsletter.njk
+++ b/src/_includes/_newsletter.njk
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <h2 class="desc">Email Newsletter</h2>
-        <span class="title mono">Don't miss the forest for the trees</span>
+        <span class="title mono">Strategies for content & career</span>
       </div>
     </div>
     <div class="row">
