center the damn div dammit

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -384,14 +384,15 @@ img {
 
 .links-page {
   background: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   .row {
     width: 100%;
     max-width: 700px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    row-gap: 5%;
-
+    justify-content: center;
     .col {
       &.content {
         padding: 2.5rem 2rem;
