fixes newsletter link on links page

--- a/src/links.njk
+++ b/src/links.njk
@@ -18,7 +18,7 @@ title: Find Me Online — Sam Sycamore
           Content creator, technical writer, copywriter, public speaker.
         </p>
                 <div>
-                    <a class="btn-links" href="http://getrevue.co/profile/sycamore">Newsletter: Strategies for Content & Career</a>
+                    <a class="btn-links" href="http://www.getrevue.co/profile/sycamore">Newsletter: Strategies for Content & Career</a>
                 </div>
                 <div>
                     <a class="btn-links" href="https://blog.sycamore.design">Sycamore Design Blog</a>
