--- a/src/links.njk
+++ b/src/links.njk
@@ -11,7 +11,7 @@ title: Find Me Online — Sam Sycamore
           Sam Sycamore
         </h1>
                 <p class="subheadline">
-          Head of Content Strategy & Marketing at Hashnode
+          Marketing at Hashnode
         </p>
                 <p class="callout">
           Writer and web developer in the tech industry.<br/> 
