--- a/src/links.njk
+++ b/src/links.njk
@@ -11,7 +11,7 @@ title: Find Me Online — Sam Sycamore
           Sam Sycamore
         </h1>
                 <p class="subheadline">
-          Marketing at Hashnode
+          Developer Advocate at MUI
         </p>
                 <p class="callout">
           Writer and web developer in the tech industry.<br/> 
@@ -25,12 +25,6 @@ title: Find Me Online — Sam Sycamore
                 </div>
                 <div>
                     <a class="btn-links" href="https://work.sycamore.design">Portfolio & Work History</a>
-                </div>
-                <div>
-                    <a class="btn-links" href="mailto:sam@sycamore.design">Work With Me</a>
-                </div>
-                <div>
-                    <a class="btn-links" href="https://sycamoredesign.notion.site/sycamoredesign/Sam-s-Press-Kit-08ca728b8a6f4ead9726021f328e47fc">Press Kit</a>
                 </div>
                 <div>
                     <a class="btn-links" href="https://twitter.com/tanoaksam">Twitter</a>
